<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuFavorites"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/menu_my_favorites"
        />
    <item
        android:id="@+id/menuSetting"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/menu_settings"
        />
</menu>